experiments/declparser/DeclarationParser.py
# Generated from ./antlr/Declaration.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DeclarationParser ( Parser ):

    grammarFileName = "Declaration.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'->'", "','", "<INVALID>", "'var'", 
                     "'func'", "'struct'", "'enum'", "'alias'", "'memb'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "VAR", "FUNC", "STRUCT", "ENUM", "ALIAS", "MEMBER", 
                      "ID", "TYPE" ]

    RULE_start = 0
    RULE_declaration = 1
    RULE_member = 2

    ruleNames =  [ "start", "declaration", "member" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    VAR=5
    FUNC=6
    STRUCT=7
    ENUM=8
    ALIAS=9
    MEMBER=10
    ID=11
    TYPE=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeclarationParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DeclarationParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DeclarationParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = DeclarationParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 992) != 0):
                self.state = 6
                self.declaration()
                self.state = 11
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.decl_type = None # Token
            self.name = None # Token
            self.aliased_type = None # Token
            self.var_type = None # Token
            self.return_type = None # Token
            self._TYPE = None # Token
            self.arg_types = list() # of Tokens
            self._ID = None # Token
            self.enum_values = list() # of Tokens

        def ALIAS(self):
            return self.getToken(DeclarationParser.ALIAS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DeclarationParser.ID)
            else:
                return self.getToken(DeclarationParser.ID, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(DeclarationParser.TYPE)
            else:
                return self.getToken(DeclarationParser.TYPE, i)

        def VAR(self):
            return self.getToken(DeclarationParser.VAR, 0)

        def FUNC(self):
            return self.getToken(DeclarationParser.FUNC, 0)

        def STRUCT(self):
            return self.getToken(DeclarationParser.STRUCT, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeclarationParser.MemberContext)
            else:
                return self.getTypedRuleContext(DeclarationParser.MemberContext,i)


        def ENUM(self):
            return self.getToken(DeclarationParser.ENUM, 0)

        def getRuleIndex(self):
            return DeclarationParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = DeclarationParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 12
                localctx.decl_type = self.match(DeclarationParser.ALIAS)
                self.state = 13
                localctx.name = self.match(DeclarationParser.ID)
                self.state = 14
                self.match(DeclarationParser.T__0)
                self.state = 15
                localctx.aliased_type = self.match(DeclarationParser.TYPE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 16
                localctx.decl_type = self.match(DeclarationParser.VAR)
                self.state = 17
                localctx.name = self.match(DeclarationParser.ID)
                self.state = 18
                self.match(DeclarationParser.T__0)
                self.state = 19
                localctx.var_type = self.match(DeclarationParser.TYPE)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 20
                localctx.decl_type = self.match(DeclarationParser.FUNC)
                self.state = 21
                localctx.name = self.match(DeclarationParser.ID)
                self.state = 22
                self.match(DeclarationParser.T__0)
                self.state = 23
                localctx.return_type = self.match(DeclarationParser.TYPE)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 24
                    self.match(DeclarationParser.T__1)
                    self.state = 25
                    localctx._TYPE = self.match(DeclarationParser.TYPE)
                    localctx.arg_types.append(localctx._TYPE)
                    self.state = 30
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==3:
                        self.state = 26
                        self.match(DeclarationParser.T__2)
                        self.state = 27
                        localctx._TYPE = self.match(DeclarationParser.TYPE)
                        localctx.arg_types.append(localctx._TYPE)
                        self.state = 32
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                localctx.decl_type = self.match(DeclarationParser.STRUCT)
                self.state = 36
                localctx.name = self.match(DeclarationParser.ID)
                self.state = 37
                self.match(DeclarationParser.T__0)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 38
                    self.member()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                localctx.decl_type = self.match(DeclarationParser.ENUM)
                self.state = 45
                localctx.name = self.match(DeclarationParser.ID)
                self.state = 46
                self.match(DeclarationParser.T__0)
                self.state = 47
                localctx._ID = self.match(DeclarationParser.ID)
                localctx.enum_values.append(localctx._ID)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 48
                    self.match(DeclarationParser.T__2)
                    self.state = 49
                    localctx._ID = self.match(DeclarationParser.ID)
                    localctx.enum_values.append(localctx._ID)
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.memb_type = None # Token

        def MEMBER(self):
            return self.getToken(DeclarationParser.MEMBER, 0)

        def ID(self):
            return self.getToken(DeclarationParser.ID, 0)

        def TYPE(self):
            return self.getToken(DeclarationParser.TYPE, 0)

        def getRuleIndex(self):
            return DeclarationParser.RULE_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember" ):
                listener.enterMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember" ):
                listener.exitMember(self)




    def member(self):

        localctx = DeclarationParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(DeclarationParser.MEMBER)
            self.state = 58
            localctx.name = self.match(DeclarationParser.ID)
            self.state = 59
            self.match(DeclarationParser.T__0)
            self.state = 60
            localctx.memb_type = self.match(DeclarationParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





